In tests use a clock that ticks only once per microsecond